fix(headless-styles): make sure page text doesn't wrap

--- a/packages/headless-styles/src/components/Pagination/paginationCSS.module.css
+++ b/packages/headless-styles/src/components/Pagination/paginationCSS.module.css
@@ -58,6 +58,7 @@
 
 .paginationText {
   color: var(--ps-text-medium);
+  white-space: nowrap;
 }
 
 .paginationText > strong {
